--- a/style.css
+++ b/style.css
@@ -22,6 +22,14 @@
     text-transform: uppercase;
 }
 
+#dice-1{
+    top: 120px;
+}
+
+#dice-2{
+    top: 250px;
+}
+
 .clearfix::after {
     content: "";
     display: table;
